fixed z-index, user icon should always higher than other markers

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -66,7 +66,7 @@ also, this div is just a point with no width or height */
 // }
 
 .user-marker {
-  z-index: 2;
+  z-index: 3;
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -134,7 +134,7 @@ also, this div is just a point with no width or height */
 }
 
 .pinpoint-active {
-  z-index: 9999;
+  z-index: 2;
   .marker-icon {
     // background-color: $light-color;
     // border-color: $dark-color;
